# IronLife

./: .gitignore  README.md
backend/: .env.example  create_tables.py  migrate.py  pyproject.toml  requirements.txt  seed_ejercicios.py
backend/app/: __init__.py  config.py  database.py  main.py  models.py  schemas.py  security.py
backend/app/routers/: __init__.py  auth.py  entrenamiento.py
backend/db/migrations/: env.py
backend/db/migrations/versions/: 2f070fa457ae_initial.py
backend/scripts/: seed.py
docs/: 01-descripcion-general.md  02-stack-tecnologico.md  03-arquitectura.md  04-api-reference.md  05-base-de-datos.md  06-instalacion.md  07-roadmap.md  README.md
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  i18n.js
frontend/src/api/: index.js
frontend/src/components/: AuthForm.jsx  Calendario.jsx  Charts.jsx  Layout.jsx  ModalEjercicio.jsx  TarjetaCardio.jsx  TarjetaEjercicio.jsx
frontend/src/constants/: dates.js  routines.js
frontend/src/context/: AuthContext.jsx  index.js
frontend/src/data/: historialData.js  inicioData.js  progresoData.js
frontend/src/hooks/: useTheme.js
frontend/src/locales/: en.json  es.json
frontend/src/pages/: PantallaCalculadora.jsx  PantallaEditorRutina.jsx  PantallaEntrenar.jsx  PantallaHistorial.jsx  PantallaInicio.jsx  PantallaProgreso.jsx  PantallaSeleccionRutina.jsx
frontend/src/ui/: charts.jsx  grupoColores.js  theme.js
frontend/src/utils/: dates.js  format.js  training.js
