[project]
name = "ironlife-backend"
version = "0.1.0"
description = "IronLife gym app — FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "psycopg2-binary",
    "pydantic-settings",
    "python-dotenv",
    "bcrypt",
    "pyjwt",
    "email-validator",
    "python-multipart",
]

[tool.uv]
package = false
